--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
+    "i18next": "^25.5.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "jwt-decode": "^4.0.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-i18next": "^15.7.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
